2010-06-02  Javier Fernández  <jfernandez@igalia.com>

	reviewed by: Antía Puentes <apuentes@igalia.com>

	* src/gdigicam-manager.c:
	(_g_digicam_manager_class_init): Added new signals to notify
	"reading/writing" and "no space left" errors that happens in
	the lower layers.
	(_g_digicam_manager_bus_callback): Checks the received errors
	and emits the proper signals.
	(_internal_error_recovering): Tries to stop the bin when an error
	in the lower layers happen.
	(_evaluate_transition): Checks if the state change of the bin
	was a success.
	* src/gdigicam-manager.h (struct _GDigicamManagerClass):
	Added class methods for the new signals.

2010-02-02  Andrés Gómez  <agomez@igalia.com>

	* ext/gst-camerabin/gdigicam-camerabin.c: The 16x9 still picture
	resolutions are now 2560x1440.
	Fixes: NB#150488.

2009-12-03  Andrés Gómez  <agomez@igalia.com>

	* ext/gst-camerabin/gdigicam-camerabin.c: The 16x9 still picture:ChangeLog

	* doc/reference/gdigicam-sections.txt: Added new gtk-doc.
	* src/gdigicam-manager-private.h: Removed "gst_bus" private
	member.
	* src/gdigicam-manager.h:
	* src/gdigicam-manager.c:
	(g_digicam_manager_set_gstreamer_bin): Removed management of the
	old "gst_bus" private member. Viewfinder sink stored in the proper
	descriptor, now.
	(g_digicam_manager_play_bin): We store the xwindow id just if the
	descriptor has viewfinder capabilities, now.
	(g_digicam_manager_get_xwindow_id): Added. Retrieves the xwindow
	id to be used as output by the gstreamer bin.
	(_g_digicam_manager_init): Removed "gst_bus" private
	member.
	(_g_digicam_manager_cleanup_bin): Removed "gst_bus" private
	member and handler.
	(_g_digicam_manager_cleanup_sink): Resetting "xwindow_id" private
	member.
	(_g_digicam_manager_free_private): Resets the bin related private
	members.
	* tests/check-gdigicam-manager.c:
	(test_start_stop_viewfinder_regular): Removed. Refactored into
	test_start_stop_get_viewfinder_regular.
	(test_start_stop_get_viewfinder_regular): Added. Refactored from