@@ -1,3 +1,12 @@
+2010-07-25  Antía Puentes  <apuentes@igalia.com>
+
+	* src/gdigicam-manager.h:
+	(pict_done),
+	* src/gdigicam-manager.c:
+	(_picture_done):
+	Modified the PICT_DONE_SIGNAL handler signature.
+	It uses a const gchar *instead of a GString now.
+
 2010-06-02  Javier Fernández  <jfernandez@igalia.com>
 
 	reviewed by: Antía Puentes <apuentes@igalia.com>
